syntax = "proto3";
import "BasicTypes.proto";

option csharp_namespace = "TestDateCalculationService";

package TestDateCalculations;

service TestDateCalculations {
	rpc CalculateToolTestDateFor(ListOfLocationToolAssignmentIds) returns (NoParams);
	rpc CalculateToolTestDateForAllLocationToolAssignments(NoParams) returns (NoParams);
	rpc CalculateToolTestDateForTestLevelSet(Long) returns (NoParams);
	rpc CalculateProcessControlDateFor(ListOfProcessControlConditionIds) returns (NoParams);
	rpc CalculateProcessControlDateForAllProcessControlConditions(NoParams) returns (NoParams);
	rpc CalculateProcessControlDateForTestLevelSet(Long) returns (NoParams);
}

message ListOfLocationToolAssignmentIds {
	repeated int64 values = 1;
}

message ListOfProcessControlConditionIds {
	repeated int64 values = 1;
}